Спринт №6 1-Работа